--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 About me
               </h2>
             </div>
-            <p>
+            <p size="10px">
               As a dedicated cloud enthusiast with a strong passion for leveraging cloud technologies to drive innovation and efficiency, I am committed to applying my expertise in cloud computing, infrastructure management, and scalable solutions. I thrive in challenging environments, aiming to optimize cloud infrastructures, enhance security, and ensure seamless integration of cloud services to support business growth and transformation.
             </p>
             
